# owenqp

./: .gitignore  README.md  exports.def  owenqp.cabal  owenquad.cabal  stack.yaml
cppfiles/: owen.cpp  owen128.cpp  owendouble.cpp  owenlong.cpp
src/: Imports.hs  Owen.hs  OwenCDF1.hs  OwenCDF2.hs  OwenCDF3.hs  OwenCDF4.hs  OwenQ1.hs  OwenQ2.hs  OwenT.hs  Student.hs
src-dll/: OwenExport.hs
src-exec/: Main.hs
src/Internal/: Infinite.hs  NormCDF.hs
src/OwenCDF1/: Internal.hs  OwenCDF1CPP.hs
src/OwenCDF2/: Internal.hs  OwenCDF2CPP.hs
src/OwenCDF3/: Internal.hs  OwenCDF3CPP.hs
src/OwenCDF4/: Internal.hs  OwenCDF4CPP.hs
src/OwenQ1/: OwenQ1CPP.hs
src/OwenQ2/: OwenQ2CPP.hs
src/Student/: StudentCPP.hs
test/: Main.hs
