name:                owenqp
version:             0.1.0.0
synopsis:            Owen T-function and Owen Q-function
description:
    Evaluation of the Owen T-function and the Owen Q-function.
    .
    Also evaluates the cumulative distribution function of the noncentral Student
    distribution with an integer number of degrees of freedom.
homepage:            https://github.com/stla/owenqp#readme
license:             GPL-3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Distributions
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag dll
  description:
    Build the DLL.
  default: False

flag exe
  description:
    Build the executable.
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Student
                     , Student.StudentCPP
                     , OwenT
                     , OwenQ1
                     , OwenQ1.OwenQ1CPP
                     , OwenCDF4
                     , OwenCDF4.OwenCDF4CPP
                     , OwenCDF4.Internal
                     , Internal.NormCDF
                     , Internal.Infinite
                     , OwenCDF2
                     , OwenCDF2.OwenCDF2CPP
                     , OwenCDF2.Internal
                     , OwenQ2
                     , OwenQ2.OwenQ2CPP
                     , OwenCDF1
                     , OwenCDF1.OwenCDF1CPP
                     , OwenCDF1.Internal
                     , OwenCDF3
                     , OwenCDF3.OwenCDF3CPP
                     , OwenCDF3.Internal
  build-depends:       base >= 4.7 && < 5
                     , vector
                     , gamma
                     , erf
  default-extensions:  ScopedTypeVariables
                     , ForeignFunctionInterface
  default-language:    Haskell2010
  extra-libraries:     stdc++
                     , quadmath
  include-dirs:        cppfiles
  C-sources:           cppfiles/owenlong.cpp
  ghc-options:         -O0 -Wall

executable testowen128
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exec
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , owenqp

foreign-library owen128
  if flag(dll)
    buildable: True
  else
    buildable: False
  type:                native-shared
  lib-version-info:    0:1:0
  if os(Windows)
    options:      standalone
    mod-def-file: exports.def
  other-modules:       OwenExport
  build-depends:       base >=4.7 && <5
                     , owenqp
                     , vector
  hs-source-dirs:      src-dll
  c-sources:           StartEnd.c
  extra-libraries:     stdc++
  ghc-options:         -optl-static -pgmc g++
-- -pgml "C:\Users\sdl96354\AppData\Local\Programs\stack\x86_64-windows\ghc-8.2.2\mingw\bin\g++.exe"
  default-language:    Haskell2010
-- compile en deux phases:
-- stack exec -- ghc -c src-dll\OwenExport.hs
-- stack exec -- ghc -shared -optl-s -optl-static -lstdc++ src-dll\OwenExport.hs StartEnd.c -o Owen128.dll exports.def
test-suite owenqp-test
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  hs-source-dirs:       test/
  other-modules:
  Build-Depends:        base
                      , tasty
                      , tasty-hunit
                      , owenqp
                      , statistics
                      , vector
  Default-Language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/owenqp
